force-app/main/default/objects/nFORCE__Audit_Event__e/nFORCE__Audit_Event__e.object-meta.xml
<CustomObject>
    <description>Provides data collection for nCino Access Auditing.</description>
    <label>Audit Event</label>
    <pluralLabel>Audit Events</pluralLabel>
</CustomObject>