force-app/main/default/objects/nFORCE__Audit_Event__e/fields/nFORCE__User__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__User__c</fullName>
    <description>The system populates this field to map the audit log to the associated user.</description>
    <label>User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>